--- a/style.css
+++ b/style.css
@@ -4,106 +4,156 @@
     box-sizing: border-box;
     font-family: "Pp Mori", sans-serif;
 }
-body, html {
+
+html,
+body {
     height: 100%;
     width: 100%;
+    background-color: rgb(0, 0, 0);
+    overflow: hidden;
 }
-#main{
-    display:flex;
+
+#main {
+    display: flex;
     flex-direction: column;
 }
-body{
-    background-color: rgb(0, 0, 0);
-}
-#nav
-{
-    height:80px;
-    width: 100%;
-    display:flex;
-    padding:3vw 5vw;
-    justify-content: space-between;
-    align-items: center;
-    color:rgb(255, 255, 255);
-    margin-bottom: 7vw;
-}
-#logo{
-    height:80px;
-    width:80px;
-}
-#logo>img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius:50%;
-}
-#menu{
-    display:flex;
-    gap:30px;
-    font-size:1.2vw;
-}
+
 #page1 {
     min-height: 90vh;
     width: 100vw;
     position: relative;
-    display:flex;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    color:rgb(255, 255, 255);
-    padding:2vw;
+    color: #fff;
+    padding: 2vw;
 }
-#front{
-    width:40%;
+
+#nav {
+    height: 80px;
+    width: 100%;
+    display: flex;
+    padding: 3vw 5vw;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 7vw;
 }
-#front h1
-{
-    font-size:12vw;
+
+#logo {
+    height: 80px;
+    width: 80px;
+}
+
+#logo>img {
+    width: 100%;
+
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+#menu {
+    display: flex;
+    gap: 30px;
+    font-size: 1.2vw;
+    text-shadow: 2px 2px 2px rgba(0, 102, 255, 1);
+
+}
+.ri-add-fill{
+    font-size: 2.4vw;
+    cursor: pointer;
+    text-shadow: 2px 2px 2px rgba(0, 102, 255, 1);
+}
+
+#front {
+    width: 40%;
+}
+
+#front h1 {
+
+    font-size: 12vw;
     line-height: 9vw;
     text-transform: uppercase;
     word-spacing: 20vw;
     font-weight: 400;
+    text-shadow: 2px 2px 2px rgba(0, 102, 255, 1);
 }
-#ab{
+
+#ab {
     position: absolute;
-    left:4%;
-    width:30%;
-    top:86%;
+    left: 4%;
+    width: 30%;
+    top: 86%;
+    text-shadow: 2px 2px 5px rgba(0, 102, 255, 1);
+
 }
-#t1,#t3{
+
+#t1,
+#t3 {
     position: relative;
-    left:10%;
+    left: 10%;
 }
-#t2{
+
+#t2 {
     position: relative;
-    left:-30%;
+    left: -30%;
 }
+
 #page2 {
     min-height: 100vh;
-    width: 100%;
+    width: 100vw;
+    display: flex;
 }
-#page2 video{
+
+#page2 video {
     position: relative;
-    left:4%;
-    width:50%;
+    left: 4%;
+    width: 50%;
+    object-fit: cover;
     background-position: center;
     background-size: cover;
-    object-fit: cover;
-
 }
 
-
-#page3{
+#page3 {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
-    position: relative;
-    min-height: 100vh;
-    width:100vw;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.text {
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
+.text-img {
+    width: 5vw;
+    height: 5vw;
+    background-image: url('Blue Modern G Letter Technology Logo Design (4).png');
+    background-size: cover;
+    background-position: center;
+}
+
+.text h1 {
+    font-size: 5vw;
+    color: #fff;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(0, 102, 255, 1);
+
+}
+
 .cards {
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
@@ -114,45 +164,162 @@ body{
 
 #card-one {
     top: 130%;
-    background-image: url(ONE.png);
+    background-image: url('ONE.png');
 }
 
 #card-two {
     top: 230%;
-    background-image: url(two.png);
+    background-image: url('two.png');
 }
 
 #card-three {
     top: 250%;
-    background-image: url(three.png);
+    background-image: url('three.png');
 }
 
-.text{
+#page4 {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background-color: #000;
+}
+
+#page4 {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .page4-heading {
     position: absolute;
-    width: 100%;
-    top: 25%;
+    top: 50%;  
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5vw;
+    color: #fff;
+    z-index: 1;
+    white-space: nowrap;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(0, 102, 255, 1);
+
+  }
+  
+  .page4-cards-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400vw; 
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    transform: translateX(100vw);
+    z-index: 10;
+  }
+  .page4-card {
+    flex-shrink: 0;
+    width: 80vw;
+    height: 80vh;
+    margin-right: 5vw;
+    background-size: cover;
+    background-position: center;
+    border-radius: 20px;
+  }
+
+
+
+  footer {
+    background: #111;
+    color: #fff;
+    padding: 40px 20px;
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+.footer-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1100px;
+    margin: 0 auto;
+    gap: 30px;
+}
+
+.footer-logo img {
+    width: 10vw;
+}
+
+.footer-logo p {
+    font-size: 18px;
+    opacity: 0.8;
+}
+
+.footer-social h3, .footer-newsletter h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 3vw;
+    margin-top:2vw;
+}
+
+.social-icons a {
+    color: #bbb;
+    font-size: 2vw;
+    transition: color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #fff;
+}
+
+.footer-newsletter form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-.text-img{
-    width: 5vw;
-    height: 5vw;
-    /* background-color: #fff; */
-    background-image: url(Blue\ Modern\ G\ Letter\ Technology\ Logo\ Design\ \(4\).png);
-    background-size: cover;
-    background-position: center;
 }
 
-.text h1{
-    font-size: 3vw;
-    color: #fff;
-    text-align: center;
+.footer-newsletter input {
+    padding: 10px;
+    width: 100%;
+    max-width: 250px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
-.text p{
-    font-size: 1vw;
-    color: rgb(126, 126, 126);
-    text-align: center;
+.footer-newsletter button {
+    background: #ff4a57;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.footer-newsletter button:hover {
+    background: #ff1e30;
+}
+
+.footer-bottom {
+    margin-top: 20px;
+    border-top: 1px solid #444;
+    padding-top: 10px;
+    font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+    }
 }
